RESOLVED FIXED306803
Unreviewed, never use Ref for VM
https://bugs.webkit.org/show_bug.cgi?id=306803
Summary Unreviewed, never use Ref for VM
Yusuke Suzuki
Reported 2026-02-02 14:08:32 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-02 14:08:41 PST
Yusuke Suzuki
Comment 2 2026-02-02 14:17:16 PST
EWS
Comment 3 2026-02-02 14:19:55 PST
Committed 306654@main (9f25dfb05ca8): <https://commits.webkit.org/306654@main> Reviewed commits have been landed. Closing PR #57725 and removing active labels.
Alexey Proskuryakov
Comment 4 2026-02-02 17:34:42 PST
*** Bug 306801 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.