Unreviewed, never use Ref for VM https://bugs.webkit.org/show_bug.cgi?id=306803 rdar://169476937

* Source/JavaScriptCore/runtime/IteratorOperations.cpp:
(JSC::getAsyncIteratorImpl):

Canonical link: https://commits.webkit.org/306654@main